tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__TheDoortoHeaven-AAAAAAAAAAAAAAAAAAAKDA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2572,
  "prerequisites": [
    3296,
    3233
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You'll need a lot of these to make a full stargate...",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Door to Heaven?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3296,
    3233
  ],
  "rewards": [],
  "tasks": []
}
