tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__YoullProbablyNee-AAAAAAAAAAAAAAAAAAAKIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2594,
  "prerequisites": [
    2572
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It may not actually store any energy but it'll still be useful for some other endgame items.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You'll Probably Need Quite a Few of These",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2572
  ],
  "rewards": [],
  "tasks": []
}
