tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__Youmadeit-AAAAAAAAAAAAAAAAAAAM4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3296,
  "prerequisites": [
    5019343597665338373,
    18135508534117862498,
    16055132733293817239
  ],
  "properties": {
    "auto_claim": false,
    "desc": "May Dreammaster have mercy on your soul. You have reached the highest craftable tier in the game!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You Made It!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5019343597665338373,
    18135508534117862498,
    16055132733293817239
  ],
  "rewards": [],
  "tasks": []
}
