tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__EndgameGoals-AAAAAAAAAAAAAAAAAAAAHQ==__Yourlordandsavio-smCKxKkMSeyIAUeFInS4hQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12181192370669533317,
  "prerequisites": [
    3296
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You want to rush this as soon as possible.\n\nEvery L of Universium matters.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Your Lord and Saviour, UXV CoAL",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3296
  ],
  "rewards": [],
  "tasks": []
}
